--- a/src/Components/NavBar/navbar.module.css
+++ b/src/Components/NavBar/navbar.module.css
@@ -1,141 +1,3 @@
-/* header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    height: 80px;
-    padding: 0 2rem;
-    background-color: black;
-    color: var(--textColor);
-}
-h3{
-    font-weight: lighter;
-}
-span{
-    font-weight: bold;
-}
-nav a {
-    margin: 0 2rem;
-    color: var(--textColor);
-    text-decoration: none;
-}
-
-nav a:hover {
-    color: #848484;
-}
-nav .login:hover {
-    font-weight: bold;
-}
-
-header .navBtn {
-    padding: 5px;
-    cursor: pointer;
-    background: transparent;
-    border: none;
-    outline: none;
-    color: var (--textColor);
-    visibility: hidden;
-    opacity: 0;
-    font-size: 1.8rem;
-}
-
-
- header div {
-	display: flex;
-	align-items: center;
-    justify-content: flex-end;
-}  
-
-nav{
-    display: flex;
-    align-items: center;
-
-}
-.icon{
-    color: #ffff;
-}
-
-.logInBtn{
-    width: 100px;
-    height: 30px;
-    color: white;
-    text-align: center;
-    outline: none;
-    padding: 10px;
-    font-size: 14px;
-    letter-spacing: 1px;
-    border: none;
-    background-color: black;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;
-}
-
-.signInBtn{
-    width: 100px;
-    height: 30px;
-    color: black;
-    text-align: center;
-    outline: none;
-    padding: 10px;
-    font-size: 14px;
-    letter-spacing: 1px;
-    border: none;
-    background-color: white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;
-}
-
-.signInBtn:hover {
-    color: white;
-    background-color: rgb(0, 0, 0);
-    border: 1px solid rgb(255, 255, 255);
-}
-.logInBtn:hover {
-    font-weight: bold;
-}
-
-
-@media only screen and (max-width: 1024px) {
-    header .navBtn {
-        visibility: visible;
-        opacity: 1;
-    }
-
-    header .nav {
-        position: fixed;
-        top: -100vh;
-        left: 0;
-        height: 100%;
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        gap: 1.5rem;
-        background-color: black;
-        transition: 1s;
-        transform: translateY(100vh);
-    }
-
-     header .navResponsive{
-        transform: none;
-    } 
-
-    header .navCloseBtn {
-        position: absolute;
-        top: 2rem;
-        right: 2rem;
-    }
-
-    .nav a{
-        font-size: 1.5rem;
-    }
-}
- */
-
  header {
     display: flex;
     align-items: center;
@@ -279,3 +141,24 @@ a:hover {
         font-size: 1.5rem;
     }
 }
+
+
+.appLogo {
+    height: 2.5rem;
+    pointer-events: none;
+  }
+  
+  @media (prefers-reduced-motion: no-preference) {
+    .appLogo {
+      animation: App-logo-spin infinite 20s linear;
+    }
+  }
+
+  @keyframes App-logo-spin {
+    from {
+      transform: rotate(0deg);
+    }
+    to {
+      transform: rotate(360deg);
+    }
+  }
