modified(NavBarBootstrap.jsx css)

--- a/src/Components/NavBar/navbar.module.css
+++ b/src/Components/NavBar/navbar.module.css
@@ -13,12 +13,13 @@ h3{
 span{
     font-weight: bold;
 }
-a {
+.a {
     margin: 0 2rem;
-    color: var(--textColor);
+    /* color: var(--textColor); */
+    color: white;
     text-decoration: none;
 }
-a:hover {
+.a:hover {
     color: #848484;
 }
 
